# QmlStyle

./: .gitignore  .travis.yaml  CMakeLists.txt  travis.yaml
artwork/: Bg_pattern.pat  Gradients_Final.grd  Template.ormr  background.xcf  backgroundtile.xcf  button.xcf
artwork/Background/: background.xcf  backgroundtile.xcf
src/: CMakeLists.txt
src/app/: CMakeLists.txt  myapp.cpp  myapp.qrc
src/app/Qml/: Contents.qml  Contents.ui.qml  MyApp.qml
src/genplugin/: CMakeLists.txt  generator.cpp  lsbutton.cpp  lsbutton.h  lscheckbox.cpp  lscheckbox.h  lscheckboxindicator.cpp  lscombobox.cpp  lscombobox.h  lscontrols.cpp  lscontrols.h  lscontrolsrenderer.cpp  lscontrolsrenderer.h  lsprogressbar.cpp  lsprogressbar.h  lsprogressbarindicator.cpp  lsprogressbarindicator.h  lsradiobutton.cpp  lsradiobutton.h  lsslider.cpp  lsslider.h  lssliderindicator.cpp  lssliderindicator.h  lstextfield.cpp  lstextfield.h  lstoolbutton.cpp  lstoolbutton.h  lstoolbuttonboth.cpp  lstoolbuttonboth.h  lstoolbuttonleft.cpp  lstoolbuttonleft.h  lstoolbuttonright.cpp  lstoolbuttonright.h
src/libs/: CMakeLists.txt
src/libs/LsControlsPlugin/: CMakeLists.txt  lscontrolsplugin.cpp  lscontrolsplugin.h  lscontrolsplugin.qrc  qmldir
src/libs/LsControlsPlugin/Qml/: LsApplicationWindow.ui.qml  LsButton.qml  LsButton.ui.qml  LsCheckBox.qml  LsCheckBox.ui.qml  LsColors.qml  LsComboBox.qml  LsComboBox.ui.qml  LsLabel.qml  LsLabel.ui.qml  LsProgressBar.qml  LsProgressBar.ui.qml  LsRadioButton.qml  LsRadioButton.ui.qml  LsSlider.qml  LsSlider.ui.qml  LsSwitch.qml  LsSwitch.ui.qml  LsText.qml  LsText.ui.qml  LsTextField.qml  LsTextField.ui.qml
src/libs/MyLib/: CMakeLists.txt  myclass.cpp  myclass.h
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  testmyapp.cpp
tests/libs/MyLib/: CMakeLists.txt  testmyclass.cpp
